# kakasi

./: Cargo.toml  README.md
crates/cli/: Cargo.toml
crates/cli/src/commands/: mod.rs  new.rs
src/: cli.rs  command_prelude.rs  main.rs
src/cli/: errors.rs  mod.rs  parser.rs  shell.rs
src/commands/: mod.rs  new.rs
src/util/: paths.rs
src/util/_template_stubs/: main.rs.stub
