[package]
name = "kakasi"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "crates/core",
]

[dependencies]
anyhow = "1.0.57"
atty = "0.2.14"
clap = "3.2.5"
libc = "0.2.126"
serde = "1.0.137"
serde_json = "1.0.81"
termcolor = "1.1.3"
log = "0.4.6"

[[bin]]
name = "kakasi"
path = "src/main.rs"

